// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`io-carousel — render snapshots > renders configured navigation state 1`] = `
<io-carousel active-slide-index="0" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div role="region" aria-label="Carousel" aria-roledescription="carousel">
      <span aria-live="polite" aria-atomic="true" class="sr-only">
        Slide 1 of 0
      </span>
      <div class="carousel-wrap">
        <div class="carousel-track">
          <slot></slot>
        </div>
        <button class="carousel-btn carousel-btn--prev" aria-label="Previous">
          <svg viewBox="0 0 26 16" width="20" height="13" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
            <path d="M17.825.575l-1.237 1.238L21.9 7.125H.75v1.75H21.9l-5.312 5.312 1.237 1.237L25.25 8 17.825.575z" fill="currentColor"></path>
          </svg>
        </button>
        <button class="carousel-btn carousel-btn--next" aria-label="Next">
          <svg viewBox="0 0 26 16" width="20" height="13" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
            <path d="M17.825.575l-1.237 1.238L21.9 7.125H.75v1.75H21.9l-5.312 5.312 1.237 1.237L25.25 8 17.825.575z" fill="currentColor"></path>
          </svg>
        </button>
      </div>
    </div>
  </mock:shadow-root>
  <div __self="[object global]" __source="[object Object]">
    Slide 1
  </div>
  <div __self="[object global]" __source="[object Object]">
    Slide 2
  </div>
  <div __self="[object global]" __source="[object Object]">
    Slide 3
  </div>
</io-carousel>
`;

exports[`io-carousel — render snapshots > renders default state 1`] = `
<io-carousel active-slide-index="0" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div role="region" aria-label="Carousel" aria-roledescription="carousel">
      <span aria-live="polite" aria-atomic="true" class="sr-only"></span>
      <div class="carousel-wrap">
        <div class="carousel-track">
          <slot></slot>
        </div>
        <button class="carousel-btn carousel-btn--prev" aria-label="Previous">
          <svg viewBox="0 0 26 16" width="20" height="13" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
            <path d="M17.825.575l-1.237 1.238L21.9 7.125H.75v1.75H21.9l-5.312 5.312 1.237 1.237L25.25 8 17.825.575z" fill="currentColor"></path>
          </svg>
        </button>
        <button class="carousel-btn carousel-btn--next" aria-label="Next">
          <svg viewBox="0 0 26 16" width="20" height="13" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
            <path d="M17.825.575l-1.237 1.238L21.9 7.125H.75v1.75H21.9l-5.312 5.312 1.237 1.237L25.25 8 17.825.575z" fill="currentColor"></path>
          </svg>
        </button>
      </div>
    </div>
  </mock:shadow-root>
  <div __self="[object global]" __source="[object Object]">
    Slide 1
  </div>
  <div __self="[object global]" __source="[object Object]">
    Slide 2
  </div>
</io-carousel>
`;
